@@ -94,9 +94,9 @@ int irq_attach(int irq, xcpt_t isr)
           /* Disable the interrupt if we can before detaching it.  We might
            * not be able to do this if:  (1) the device does not have a 
            * centralized interrupt controller (so up_disable_irq() is not
-           * supported.  Or (2) if the device has different number for vector
+           * supported).  Or (2) if the device has different number for vector
            * numbers and IRQ numbers (in that case, we don't know the correct
-           * IRQ number to use to disable the interrupt.  In those cases, the
+           * IRQ number to use to disable the interrupt).  In those cases, the
            * code will just need to be careful that it disables all interrupt
            * sources before detaching from the interrupt vector.
            */
